[gd_scene load_steps=3 format=3 uid="uid://bg0vttjga76f0"]

[ext_resource type="Texture2D" uid="uid://bkyp8lh6vxyn" path="res://backgrounds/_601a4f05-aede-444e-a73d-486c4fc6f953.jpeg" id="1_fkmpm"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_uveuk"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_uveuk")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Cybersim"

[node name="new_game_button" type="Button" parent="UI/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "new game"

[node name="continue" type="Button" parent="UI/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "continue"

[node name="load_game_button" type="Button" parent="UI/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "load game"

[node name="background" type="TextureRect" parent="."]
z_index = -8
offset_left = 1.0
offset_top = -651.0
offset_right = 1025.0
offset_bottom = 373.0
scale = Vector2(2, 2)
texture = ExtResource("1_fkmpm")

[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/load_game_button" to="." method="_on_load_game_button_pressed"]
